[package]
name = "fluent-play"
version = "0.1.0"
authors = ["Staś Małolepszy <stas@mozilla.com>"]
edition = "2018"

[[bin]]
name = "fluent-play"
path = "server/main.rs"

[dependencies]
corsware = "*"
hubcaps = "*"
hyper = "*"
hyper-tls = "*"
iron = "*"
router = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = "*"
